# telecom-ai-researcher

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  models.yaml  test_sonnet.yaml
config/prompts/: analysis.md  experiments.md  formulation.md  ideation.md  literature_review.md  review.md  writing.md
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/: ideation_output.json  pipeline_state.json  problem_formulation.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/01_literature_review/: literature_review.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/02_ideation/: ideation.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/03_formulation/: formulation.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/04_experiments/: experiments.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/05_analysis/: analysis.json  training_data.json
runs/20260225_202351_complex-valued-diffusion-denoiser-with-p/state/06_manuscript/: main.tex  (+2 more)
src/telecom_researcher/: __init__.py  config.py  context.py  main.py  pipeline.py  state.py
src/telecom_researcher/agents/: analyst.py  base.py  editor.py  experimenter.py  formulator.py  ideator.py  lit_reviewer.py  reviewer.py  writer.py
src/telecom_researcher/llm/: client.py
src/telecom_researcher/templates/: figure_style.py  ieee_conference.tex
src/telecom_researcher/tools/: arxiv_search.py  base.py  code_executor.py  figure_generator.py  latex_compiler.py  semantic_scholar.py
(+18 files in other folders)
